[package]
name = "nng-simdjson"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
humansize = "1.1.1"
humantime = "2.1.0"
libc = "0.2.99"
lipsum = "0.8.0"
lz4_flex = { version = "0.8.0", default-features = false, features = [
    "checked-decode",
] }
mimalloc = { version = "0.1.26", default-features = false }
nng = "1.0.0"
shmem-ipc = "0.2.0"
simd-json = "0.4.7"
tokio = { version = "1.10.0", features = ["full"] }
